--- a/ContCat.html
+++ b/ContCat.html
@@ -1,6 +1,6 @@
 <table border="1" class="dataframe">
   <thead>
-    <tr style="text-align: right;">
+    <tr style="text-align: right">
       <th></th>
       <th>cont_feature</th>
       <th>cat_feature</th>
@@ -9,6 +9,5 @@
       <th>cat EDA</th>
     </tr>
   </thead>
-  <tbody>
-  </tbody>
+  <tbody></tbody>
 </table>
