--- a/Cramer.html
+++ b/Cramer.html
@@ -1,6 +1,6 @@
 <table border="1" class="dataframe">
   <thead>
-    <tr style="text-align: right;">
+    <tr style="text-align: right">
       <th></th>
       <th>cat_1</th>
       <th>cat_2</th>
@@ -9,6 +9,5 @@
       <th>cat_2 plot</th>
     </tr>
   </thead>
-  <tbody>
-  </tbody>
+  <tbody></tbody>
 </table>
